menambah fitur cetak laporan dan butki pembayaran

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31645,6 +31645,7 @@ input:focus, button:focus, textarea:focus {
 
 *::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
 }
 
 *::-webkit-scrollbar-track {
